AMBARI-11033. Missing tooltips and action alignment issues

--- a/ambari-web/app/styles/widgets.less
+++ b/ambari-web/app/styles/widgets.less
@@ -18,6 +18,7 @@
 @import 'common.less';
 
 @undo-btn-margin: 10px;
+@controls-min-width: 39px;
 @combo-widget-width: 100px;
 @green: #6ebd45;
 @slider-light-grey: #e6e6e6;
@@ -67,7 +68,9 @@
     display: inline-block;
     margin-left: 10px;
     min-height: 65px;
-    min-width: 39px;
+    min-width: @controls-min-width;
+    z-index: 1;
+    position: relative;
     &.version-labels {
       min-width: 52px;
       .label-current {
@@ -99,6 +102,16 @@
         color: #b94a48;
       }
     }
+  }
+  .widget-config-raw {
+    width: calc(~"100% - 30px -"@controls-min-width);
+  }
+  &.slider-widget {
+    width: 100%;
+    overflow-x: hidden;
+    margin-left: -20px;
+    margin-right: 0;
+    padding-left: 20px;
   }
 }
 
